# OutlineMCP

./: .gitignore  QUICK_SETUP.md  README.md  SOLUTION_SUMMARY.md  cleanup-docker.sh  install-stdio-bridge.sh  install.sh  nginx-location.conf  proxy.py  pyproject.toml  requirements.txt  stdio_bridge.py  stdio_bridge_simple.py  verify.sh
.claude/: settings.local.json
docs/: CLIENT_SETUP.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  NGINX_INTEGRATION.md  STDIO_BRIDGE.md
